--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Franklin Jefferson University</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<script src="js/googleanalytics.js"></script>
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
@@ -24,7 +25,7 @@
 				</div>
 				<div class="panel-body" style="padding-left: 0px">
 					<ul class="md-ul">
-						<li><a href="/diploma">Programming</a></li>
+						<!-- <li><a href="/diploma">Programming</a></li> -->
 						<li><a href="/diploma">Mobile App Development</a></li>
 					</ul>
 				</div>
