Made diploma to Masters

--- a/index.html
+++ b/index.html
@@ -3,14 +3,10 @@
 <head>
 	<title>Franklin Jefferson University</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+	<meta http-equiv="Cache-control" content="public">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script src="js/googleanalytics.js"></script>
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="templates/css/navbar.css">
-	<!-- <link href="css/bootstrap-material-design.css" rel="stylesheet"> -->
-  	<link href="css/ripples.min.css" rel="stylesheet">
 </head>
 <body>
 <div id="navbar_field"></div>
@@ -21,12 +17,12 @@
 		<div class="col-md-3 col-md-push-9">
 			<div class="panel panel-primary" style="border-radius: 0px; margin: 10px">
 				<div class="panel-heading" style="border-radius: 0px">
-					<h2 class="panel-title" style="font-size: 20px">FJU Diploma Programs</h2>
+					<h2 class="panel-title" style="font-size: 20px">FJU Masters Programs</h2>
 				</div>
 				<div class="panel-body" style="padding-left: 0px">
 					<ul class="md-ul">
 						<!-- <li><a href="/diploma">Programming</a></li> -->
-						<li><a href="/diploma">Mobile App Development</a></li>
+						<li><a href="/masters">Mobile App Development</a></li>
 					</ul>
 				</div>
 			</div><br>
@@ -46,7 +42,10 @@
 		</div>
 	</div>
 </div>
-
+<script src="js/googleanalytics.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+<!-- <link href="css/bootstrap-material-design.css" rel="stylesheet"> -->
 </body>
 <script type="text/javascript" src="templates/js/navbar.js"></script>
 </html>
