--- a/navbar_responsive.html
+++ b/navbar_responsive.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Programming, Algorithms & Data Structures Diploma</title>
+	<title>Programming, Algorithms & Data Structures Masters Degree</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="js/googleanalytics.js"></script>
+  <script async src="js/googleanalytics.js"></script>
 	<!-- <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css"> -->
 	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/cover.css">
@@ -19,12 +19,63 @@
 		font-size: 14px;
 		line-height: 1.42857143;
 	}
+
+  /*floating ask button*/
+  .mdl-button {
+  background: transparent;
+  border: none;
+  border-radius: 2px;
+  color: rgb(0,0,0);
+  position: relative;
+  height: 36px;
+  margin: 0;
+  min-width: 64px;
+  padding: 0 16px;
+  display: inline-block;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  font-size: 14px;
+  font-weight: 500;
+  text-transform: uppercase;
+  line-height: 1;
+  letter-spacing: 0;
+  overflow: hidden;
+  will-change: box-shadow;
+  transition: box-shadow 0.2s cubic-bezier(0.4, 0, 1, 1), background-color 0.2s cubic-bezier(0.4, 0, 0.2, 1), color 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+  outline: none;
+  cursor: pointer;
+  text-decoration: none;
+  text-align: center;
+  line-height: 36px;
+  vertical-align: middle; }
+
+  .mdl-button--fab {
+  border-radius: 50%;
+  font-size: 14px;
+  height: 56px;
+  margin: auto;
+  min-width: 56px;
+  width: 56px;
+  padding: 0;
+  overflow: hidden;
+  background: rgba(158,158,158, 0.20);
+  box-shadow: 0 1px 1.5px 0 rgba(0, 0, 0, 0.12), 0 1px 1px 0 rgba(0, 0, 0, 0.24);
+  position: relative;
+  line-height: normal; }
+
+  .mdl-button--colored {
+    position: fixed;
+    right: 0;
+    bottom:0;
+    margin: 3%;
+    background: #009688;
+    color: rgb(255,255,255);
+    z-index: 9999; }
 </style>
 <body>
       <div class="navbar navbar-fixed-top" role="navigation">
         <div class="container-fluid">
           <div class="navbar-header">
-            <button type="button" class="pull-left navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <button type="button" class="pull-left navbar-toggle" data-toggle="slide-collapse" data-target=".navbar-collapse">
               <span class="sr-only">Toggle navigation</span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
@@ -36,7 +87,7 @@
             <ul class="nav navbar-nav" style="color: white">
               <li class="hidden-xs" style="padding: 0px; padding-right: 20px; margin: 0px; "><a href="/" style="padding: 0px"> <img id="logo" src="img/fju.jpg"> </a></li>
               <li>
-              	<a href="#">About Us<span class="carat visible-xs"></span></a>
+              	<a href="#">About Us<span class="glyphicon glyphicon-chevron-right pull-right visible-xs"></span></a>
                 <ul class="dropdown-menu">
                   	<li><a href="/">About FJU</a></li>
       	        		<li><a href="/templates/leadership.html">Leadership</a></li>
@@ -49,38 +100,38 @@
               <li class="hidden-sm"><a href="/templates/teaching-process.html">Teaching Process</a></li>
               <li class="hidden-md hidden-sm"><a href="/templates/learning-process.html">Learning Process</a></li>
               <li>
-              	<a href="#">Degrees & Programs<span class="carat visible-xs"></span></a>
+              	<a href="#">Degrees & Programs<span class="glyphicon glyphicon-chevron-right pull-right visible-xs"></span></a>
                 <ul class="dropdown-menu">
                   <li><a href="/templates/certificate-programs.html">Certificate Programs</a></li>
-                  <li><a href="/templates/masters-degree-programs.html">Masters Degree Programs</a></li>
+                  <li><a href="/templates/masters-degree-programs.html">Masters Programs</a></li>
                   <li><a href="/templates/course-catalog.html">Course Catalog</a></li>
                 </ul>
               </li>
               <li>
-              	<a href="#"> Admissions <span class="carat visible-xs"></span></a>
+              	<a href="#"> Admissions <span class="glyphicon glyphicon-chevron-right pull-right visible-xs"></span></a>
                 <ul class="dropdown-menu">
-                  	<li><a href="/templates//application-process.html">Application Process</a></li>
-					<li><a href="/templates//admission-test.html">Admission Test</a></li>
-					<li><a href="/templates//interview--counseling.html">Interview &amp; Counseling</a></li>
-					<li><a href="/templates//tuition.html">Tuition</a></li>
+                  	<li><a href="/templates/application-process.html">Application Process</a></li>
+					<li><a href="/templates/admission-test.html">Admission Test</a></li>
+					<li><a href="/templates/interview--counseling.html">Interview &amp; Counseling</a></li>
+					<li><a href="/templates/tuition.html">Tuition</a></li>
 					<li>
 						<a href="#">Financial Aid <span class="carat"></a>
 						<ul class="dropdown-menu">
-							<li><a href="/templates//merit-scholarships.html">Merit Scholarships</a></li>
-							<li><a href="/templates//foundation-scholarships.html">Foundation Scholarships</a></li>
-							<li><a href="/templates//company-sponsorships.html">Company Sponsorships</a></li>
-							<li><a href="/templates//need-based-scholarships.html">Need based Scholarships</a></li>
-							<li><a href="/templates//deferred-tuition.html">Deferred Tuition</a></li>
-							<li><a href="/templates//teaching-assistant.html">Teaching Assistant</a></li>
+							<li><a href="/templates/merit-scholarships.html">Merit Scholarships</a></li>
+							<li><a href="/templates/foundation-scholarships.html">Foundation Scholarships</a></li>
+							<li><a href="/templates/company-sponsorships.html">Company Sponsorships</a></li>
+							<li><a href="/templates/need-based-scholarships.html">Need based Scholarships</a></li>
+							<li><a href="/templates/deferred-tuition.html">Deferred Tuition</a></li>
+							<li><a href="/templates/teaching-assistant.html">Teaching Assistant</a></li>
 						</ul>
 					</li>
               	</ul>
           	  </li>
           	  <li class="hidden-md hidden-sm">
-              	<a href="#">Diploma Programs<span class="carat visible-xs"></span></a>
+              	<a href="#">Masters Degree Programs<span class="glyphicon glyphicon-chevron-right pull-right visible-xs"></span></a>
                 <ul class="dropdown-menu">
-                  	<li><a href="/diploma/">Mobile App Development Diploma</a></li>
-	        		      <!-- <li><a href="/diploma/programming_diploma" target="_blank">Programming Diploma</a></li> -->
+                  	<li><a href="/masters/">Mobile App Development Masters Degree</a></li>
+	        		      <!-- <li><a href="/masters/programming_diploma" target="_blank">Programming Masters Degree</a></li> -->
               	</ul>
           	  </li>
           	  <li class="hidden-md hidden-sm"><a href="/templates/contact-us.html">Contact Us</a></li>
@@ -90,10 +141,10 @@
                   <li class="visible-sm"><a href="/templates/teaching-process.html">Teaching Process</a></li>
                   <li class="visible-sm visible-md"><a href="/templates/learning-process.html">Learning Process</a></li>
           	  		<li>
-		              	<a href="#">Diploma Programs<span class="carat visible-xs"></span></a>
+		              	<a href="#">Masters Programs<span class="glyphicon glyphicon-chevron-right pull-right visible-xs"></span></a>
 		                <ul class="dropdown-menu">
-		                  	<li><a href="/diploma/">Mobile App Development Diploma</a></li>
-			        		<!-- <li><a href="/diploma/programming_diploma" target="_blank">Programming Diploma</a></li> -->
+		                  	<li><a href="/masters/">Mobile App Development Masters Degree</a></li>
+			        		<!-- <li><a href="/masters/programming_diploma" target="_blank">Programming Masters Degree</a></li> -->
 		              	</ul>
 		          	  </li>
           	  		<li><a href="/templates/contact-us.html">Contact Us</a></li>
@@ -105,10 +156,10 @@
                   <li class="hidden-sm"><a href="/templates/teaching-process.html">Teaching Process</a></li>
                   <li><a href="/templates/learning-process.html">Learning Process</a></li>
                   <li>
-                    <a href="#">Diploma Programs<span class="carat visible-xs"></span></a>
+                    <a href="#">Masters Degree Programs<span class="glyphicon glyphicon-chevron-right pull-right visible-xs"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="/diploma/" target="_blank">Mobile App Development Diploma</a></li>
-                        <li><a href="/diploma/programming_diploma" target="_blank">Programming Diploma</a></li>
+                        <li><a href="/masters/" target="_blank">Mobile App Development Masters Degree</a></li>
+                        <li><a href="/masters/programming_diploma" target="_blank">Programming Masters Degree</a></li>
                     </ul>
                   </li>
                   <li><a href="/templates/contact-us.html">Contact Us</a></li>
@@ -118,18 +169,34 @@
           </div><!--/.nav-collapse -->
         </div><!--/.container -->
       </div>
+      <a href="https://docs.google.com/a/fju.us/forms/d/e/1FAIpQLSdLbrJnG22TyQAV3sUX_iPkXKU4sOA4NFio8bBiBkLD_-hL_w/viewform?usp=sf_link" target="_blank"><button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
+        <i class="material-icons">Ask</i>
+      </button></a>
 </body>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+<script src="https://jax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script> -->
 <script type="text/javascript" src="/js/jquery.smartmenus.js"></script>
 <script type="text/javascript" src="/js/jquery.smartmenus.bootstrap.js"></script>
 <script type="text/javascript">
-	$(document).on('click','.navbar-collapse.in',function(e) {
-	    if($(e.target).hasClass('has-submenu') ) {
-	    	var nextSibling = $(this).next();
-		    nextSibling.toggleClass("open");  
-		    $('.open').not(nextSibling).removeClass('open');
-	    }
-	});
+  // mobile menu slide from the left
+  $('[data-toggle="slide-collapse"]').on('click', function() {
+      $navMenuCont = $($(this).data('target'));
+      $navMenuCont.animate({'width':'toggle'}, 350);
+  });
+	// $(document).on('click','.navbar-collapse.in',function(e) {
+	//     if($(e.target).hasClass('has-submenu') ) {
+	//     	console.log("hi")
+ //        var nextSibling = $(this).next();
+	// 	    nextSibling.toggleClass("open");  
+	// 	    $('.open').not(nextSibling).removeClass('open');
+	//     }
+	// });
+  // $(document).click(function (event) {
+  //   // check if window is small enough so dropdown is created
+  //   var toggle = $(".navbar-toggle").is(":visible");
+  //   if (toggle) {
+  //     $(".navbar-collapse").hide('hide');
+  //   }
+  // });
 </script>
 </html>
